opam-version: "2.0"
synopsis: "Authenticate with external services in Dream apps"
description: """
This library allows one to add authentication with external identity provides
(currently GitHub only) in Dream applications.
"""
homepage: "https://github.com/camlworks/dream-social-login"
maintainer: "Andrey Popp <me@andreypopp.com>"
authors: ["Andrey Popp <me@andreypopp.com>"]
bug-reports: "https://github.com/camlworks/dream-social-login/issues"
depends: [
  "dream" {>= "1.0.0~alpha4"}
  "dream-encoding"
  "dune" {>= "2.9.0"}
  "hyper" {= "1.0.0~alpha1"}
  "lwt_ppx"
  "yojson"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
pin-depends: [
  ["hyper.1.0.0~alpha1" "git+https://github.com/aantron/hyper.git#7435f26"]
  ["dream.1.0.0~alpha4" "git+https://github.com/aantron/dream.git#dcc3513"]
  ["dream-httpaf.1.0.0~alpha4" "git+https://github.com/aantron/dream.git#dcc3513"]
  ["dream-pure.1.0.0~alpha4" "git+https://github.com/aantron/dream.git#dcc3513"]
  ["dream-encoding.dev" "git+https://github.com/andreypopp/dream-encoding.git#9e8b8ee"]
]
