opam-version: "2.0"

synopsis: "OAuth2 authentication for Dream"
description: """
This library allows one to add authentication with OAuth2 providers to Dream
applications.
"""

license: "MIT"
homepage: "https://github.com/camlworks/dream-social-login"
bug-reports: "https://github.com/camlworks/dream-social-login/issues"
dev-repo: "git+https://github.com/camlworks/dream-social-login.git"

author: "Andrey Popp <me@andreypopp.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

depends: [
  "dream" {>= "1.0.0~alpha4"}
  "dream-encoding"
  "dune" {>= "2.9.0"}
  "hyper"
  "lwt_ppx"
  "yojson"
  "odoc" {with-doc}
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
