opam-version: "2.0"
synopsis: "OpenID Connect (OIDC) authentication for Dream"
description: """
This library allows one to add authentication with OpenID Connect (OIDC)
providers to Dream applications.
"""
homepage: "https://github.com/camlworks/dream-social-login"
maintainer: "Andrey Popp <me@andreypopp.com>"
authors: ["Andrey Popp <me@andreypopp.com>"]
bug-reports: "https://github.com/camlworks/dream-social-login/issues"
depends: [
  "oidc"
  "dream" {>= "1.0.0~alpha4"}
  "dream-encoding"
  "dune" {>= "2.9.0"}
  "hyper"
  "lwt_ppx"
  "yojson"
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
pin-depends: [
  ["oidc.dev" "git+https://github.com/ulrikstrid/ocaml-oidc.git#f70d979"]
]
