opam-version: "2.0"

synopsis: "OpenID Connect (OIDC) authentication for Dream"
description: """
This library allows one to add authentication with OpenID Connect (OIDC)
providers to Dream applications.
"""

license: "MIT"
homepage: "https://github.com/camlworks/dream-social-login"
bug-reports: "https://github.com/camlworks/dream-social-login/issues"
dev-repo: "git+https://github.com/camlworks/dream-social-login.git"

author: "Andrey Popp <me@andreypopp.com>"
maintainer: "Anton Bachin <antonbachin@yahoo.com>"

depends: [
  "dream" {>= "1.0.0~alpha4"}
  "dream-encoding"
  "dream-oauth"
  "dune" {>= "2.9.0"}
  "hyper"
  "lwt_ppx"
  "ocaml"
  "oidc"
  "yojson"

  "odoc" {with-doc}
]
pin-depends: [
  ["oidc.dev" "git+https://github.com/ulrikstrid/ocaml-oidc.git#f70d979"]
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
